[package]
name = "enum-display-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
quote = "1.0.21"
syn = { version = "1.0.101", features = ["full"] }

[lib]
proc-macro = true
