[package]
name = "enum-display-macro"
description = "A macro to derive Display for enums"
keywords = ["enum", "display", "derive", "macro"]
version = "0.2.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/enum-display/tree/main/enum-display-derive"
homepage = "https://github.com/SeedyROM/enum-display"
repository = "https://github.com/SeedyROM/enum-display/tree/main/enum-display-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.95"
convert_case = "0.6.0"
quote = "1.0.21"
syn = { version = "1.0.101", features = ["full"] }
regex = "1.11.1"

[lib]
proc-macro = true
